<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/formulario_produto_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:textSize="0sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_product"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_id">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:elegantTextHeight="true"
            android:hint="@string/product_name"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_product"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_product"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_product">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:drawableStart="@drawable/ic_action_dinheiro"
            android:drawablePadding="8dp"
            android:elegantTextHeight="true"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_quantidade"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_price"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_price"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_price">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:elegantTextHeight="true"
            android:hint="@string/among"
            android:textColorHint="#757575"
            android:inputType="number"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_seller"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_quantidade"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_quantidade"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_quantidade">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="48dp"
            android:elegantTextHeight="true"
            android:hint="@string/seller"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/formulario_produto_seller_phone"
        android:inputType="number"
        android:digits="-0123456789"
        android:maxLength="11"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/formulario_produto_seller"
        app:layout_constraintStart_toStartOf="@id/formulario_produto_seller"
        app:layout_constraintTop_toBottomOf="@id/formulario_produto_seller">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/seller_phone_inputtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="-0123456789"
            android:maxLength="11"
            android:height="48dp"
            android:elegantTextHeight="true"
            android:hint="@string/seller_phone_label"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/formulario_produto_imagem"
        android:layout_width="191dp"
        android:layout_height="107dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/select_image_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formulario_produto_seller_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>